--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <a href="#" class="navbar-brand">SocialApp</a>
 
-            <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
+            <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
                 <li class="nav-item">
                     <a href="#" class="nav-link">Matches</a>
                 </li>
@@ -14,7 +14,7 @@
                 </li>
             </ul>
 
-            <div class="dropdown" *ngIf="loggedIn" dropdown>
+            <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
             <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome user</a>
                 <div class="dropdown-menu mt-3" *dropdownMenu>
                     <a href="#" class="dropdown-item">Edit Profile</a>
@@ -22,7 +22,7 @@
                 </div>
             </div>
 
-            <form *ngIf="!loggedIn" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
+            <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="login()" autocomplete="off">
                 <input name="username" [(ngModel)]="model.username" type="text" placeholder="Username" class="form-control me-2">
                 <input name="password" [(ngModel)]="model.password" type="password" placeholder="Password" class="form-control me-2">
                 <button class="btn btn-outline-success" type="submit">Login</button>
